--- a/StockRoom/StockRoom.Web/framework/config/route.config
+++ b/StockRoom/StockRoom.Web/framework/config/route.config
@@ -1,3 +1,4 @@
 ﻿default;default:{controller=Main}
 
 ~/{controller}/{action};requirements:{controller=letter,action=letter}
+~/{controller}/{id}/{action};requirements:{controller=letter,id=int,action=letter}
