--- a/.gitignore
+++ b/.gitignore
@@ -34,45 +34,9 @@ _ReSharper*/
 *.orig
 
 #static html files
-wojilu.Web/html/
-wojilu.Web/cms*/
-wojilu.Web/*/default.html
-wojilu.Web/default.html
-wojilu.Web/*/index.htm
-wojilu.Web/index.htm
-
-#wojilu temp files
-_wtemp/
-
-wojilu.OpenSample/framework/log/
-
-wojilu.cms.web/framework/log/
-wojilu.cms.web/static/upload/image/
-wojilu.cms.web/static/upload/wimg/
-
-#wojilu.Web/static/upload/
-wojilu.Web/static/upload/face/
-wojilu.Web/static/upload/grouplogo/*.*
-wojilu.Web/static/upload/image/
-wojilu.Web/static/upload/wimg/
-wojilu.Web/static/upload/chm/
-
-#config
-wojilu.Web/framework/log/
-wojilu.Web/framework/cache/
-wojilu.Web/framework/index/
-wojilu.Web/framework/config/
-wojilu.Web/framework/data/
-wojilu.Web/framework/data_backup*/
-
-!wojilu.Web/static/upload/face/guest.jpg
-!wojilu.Web/static/upload/face/guest_m.jpg
-!wojilu.Web/static/upload/face/guest_b.jpg
-!wojilu.Web/static/upload/face/guest_s.jpg
-!wojilu.Web/static/upload/grouplogo/group.jpg
-!wojilu.Web/static/upload/grouplogo/group_s.jpg
-
-wojilu.Web/_autocode/
+StockRoom.Web/imgs/
+StockRoom.Web/data/
+#
 
 
 
