comment the working hour

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\StockRoom.BLA\packages.config" />
+  <repository path="..\StockRoom.BLL\packages.config" />
 </repositories>
