--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ _ReSharper*/
 #static html files
 StockRoom.Web/imgs/
 StockRoom.Web/data/
-StockRoom.Web/framework/log
+StockRoom.Web/framework/log/
 #
 
 
