--- a/StockRoom.Web/StockRoom.Web.csproj
+++ b/StockRoom.Web/StockRoom.Web.csproj
@@ -1821,6 +1821,7 @@
     <None Include="framework\data\wojilu.Web.Jobs.WebJob.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Properties\PublishProfiles\stock.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
     <None Include="Web.Debug.config">
