--- a/StockRoom.Web/framework/data/wojilu.Web.Jobs.WebJob.config
+++ b/StockRoom.Web/framework/data/wojilu.Web.Jobs.WebJob.config
@@ -1,6 +1,6 @@
 ﻿[
-{ Id:1, Name:"工作时间定时刷新XXM", Type:"StockRoom.BLL.Jobs.XXMRoomOnlineJob", Interval:5000, IsRunning:true },
-{ Id:2, Name:"工作时间定时刷新FKW", Type:"StockRoom.BLL.Jobs.FKWRoomOnlineJob", Interval:6000, IsRunning:true },
-{ Id:3, Name:"XXM", Type:"StockRoom.BLL.Jobs.XXMRoomOfflineJob", Interval:5000, IsRunning:true },
+{ Id:1, Name:"工作时间定时刷新XXM", Type:"StockRoom.BLL.Jobs.XXMRoomOnlineJob", Interval:5000, IsRunning:false },
+{ Id:2, Name:"工作时间定时刷新FKW", Type:"StockRoom.BLL.Jobs.FKWRoomOnlineJob", Interval:6000, IsRunning:false },
+{ Id:3, Name:"XXM", Type:"StockRoom.BLL.Jobs.XXMRoomOfflineJob", Interval:5000, IsRunning:false },
 { Id:4, Name:"FKW", Type:"StockRoom.BLL.Jobs.FKWRoomOfflineJob", Interval:6000, IsRunning:true }
 ]
