--- a/StockRoom.Web/framework/config/route.config
+++ b/StockRoom.Web/framework/config/route.config
@@ -1,4 +1,4 @@
-﻿default;default:{controller=Main}
+﻿default;default:{controller=History}
 
 ~/{controller}/{action};requirements:{controller=letter,action=letter}
 ~/{controller}/{id}/{action};requirements:{controller=letter,id=int,action=letter}
