--- a/StockRoom.Web/StockRoom.Web.csproj
+++ b/StockRoom.Web/StockRoom.Web.csproj
@@ -52,6 +52,7 @@
     <Content Include="default.aspx" />
     <Content Include="framework\log\log.txt" />
     <Content Include="framework\views\History\Index.html" />
+    <Content Include="framework\views\History\Show.html" />
     <Content Include="framework\views\Layout\Layout.html" />
     <Content Include="framework\views\Main\Show.html" />
     <Content Include="framework\views\Main\Index.html" />
