--- a/StockRoom.Web/framework/config/route.config
+++ b/StockRoom.Web/framework/config/route.config
@@ -1,3 +1,10 @@
 ﻿default;default:{controller=History}
 
 history/{roomId}/{roomDate};default:{controller=_.History,action=Show}
+
+~/{controller}/{id};requirements:{id=int}
+~/{controller}/{action};requirements:{controller=letter,action=letter}
+~/{controller}/{id}/{action};requirements:{controller=letter,id=int,action=letter}
+~/{controller}/{action}/{page};requirements:{controller=letter,action=letter,page=page}
+~/{controller}/{id}/{page};requirements:{controller=letter,id=int,page=page}
+~/{controller}/{id}/{action}/{page};requirements:{controller=letter,id=int,action=letter,page=page}
