change the refresh

--- a/StockRoom.Web/framework/config/route.config
+++ b/StockRoom.Web/framework/config/route.config
@@ -1,4 +1,4 @@
-﻿default;default:{controller=History}
+﻿default;default:{controller=Main}
 
 history/{roomId}/{roomDate};default:{controller=_.History,action=Show}
 
