--- a/StockRoom.Web/framework/config/orm.config
+++ b/StockRoom.Web/framework/config/orm.config
@@ -16,7 +16,7 @@ AssemblyList : ["StockRoom.BLL"],
 TablePrefix : "",
 
 // 是否启用二级二级缓存
-ApplicationCache:true,
+ApplicationCache:false,
 
 // 二级缓存的过期时间，如果想永久性缓存，请填写-999
 ApplicationCacheMinutes:-999
