separate to two room tales

--- a/StockRoom.Web/framework/config/route.config
+++ b/StockRoom.Web/framework/config/route.config
@@ -1,6 +1,6 @@
 ﻿default;default:{controller=Main}
 
-history/{roomId}/{roomDate};default:{controller=_.History,action=Show}
+
 
 ~/{controller}/{id};requirements:{id=int}
 ~/{controller}/{action};requirements:{controller=letter,action=letter}
@@ -8,3 +8,5 @@ history/{roomId}/{roomDate};default:{controller=_.History,action=Show}
 ~/{controller}/{action}/{page};requirements:{controller=letter,action=letter,page=page}
 ~/{controller}/{id}/{page};requirements:{controller=letter,id=int,page=page}
 ~/{controller}/{id}/{action}/{page};requirements:{controller=letter,id=int,action=letter,page=page}
+
+history/{roomId}/{roomDate};requirements:{controller=_.History,action=Show}
