--- a/StockRoom.BLL/StockRoom.BLL.csproj
+++ b/StockRoom.BLL/StockRoom.BLL.csproj
@@ -61,7 +61,10 @@
     <Compile Include="Controller\HistoryController.cs" />
     <Compile Include="Controller\LayoutController.cs" />
     <Compile Include="Controller\MainController.cs" />
+    <Compile Include="Domain\ITeacher.cs" />
     <Compile Include="Domain\StockDate.cs" />
+    <Compile Include="Domain\Teacher332.cs" />
+    <Compile Include="Domain\Teacher333.cs" />
     <Compile Include="Jobs\FKWRoomOnlineJob.cs" />
     <Compile Include="Jobs\FKWRoomOfflineJob.cs" />
     <Compile Include="Jobs\XXMRoomOfflineJob.cs" />
@@ -69,7 +72,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockOnline.cs" />
     <Compile Include="Domain\TeacherHis.cs" />
-    <Compile Include="Domain\Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\wojilu\wojilu.csproj">
