--- a/StockRoom.Web/StockRoom.Web.csproj
+++ b/StockRoom.Web/StockRoom.Web.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
     <IISExpressWindowsAuthentication>disabled</IISExpressWindowsAuthentication>
     <IISExpressUseClassicPipelineMode>true</IISExpressUseClassicPipelineMode>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -53,7 +54,8 @@
     <Content Include="framework\views\History\Index.html" />
     <Content Include="framework\views\History\Show.html" />
     <Content Include="framework\views\Layout\Layout.html" />
-    <Content Include="framework\views\Main\Show.html" />
+    <Content Include="framework\views\Main\ShowFKW.html" />
+    <Content Include="framework\views\Main\ShowXXM.html" />
     <Content Include="framework\views\Main\Index.html" />
     <Content Include="Global.asax" />
     <Content Include="static\css\bootstrap\css\bootstrap-responsive.css" />
