--- a/StockRoom.Web/StockRoom.Web.csproj
+++ b/StockRoom.Web/StockRoom.Web.csproj
@@ -1821,9 +1821,9 @@
     <Content Include="static\js\lib\zTree\demo\cn\asyncData\getNodesForBigData.php" />
     <Content Include="static\js\lib\zTree\demo\en\asyncData\getNodes.php" />
     <Content Include="static\js\lib\zTree\demo\en\asyncData\getNodesForBigData.php" />
-    <None Include="framework\data\wojilu.Web.Jobs.WebJob.config">
+    <Content Include="framework\data\wojilu.Web.Jobs.WebJob.config">
       <SubType>Designer</SubType>
-    </None>
+    </Content>
     <None Include="Properties\PublishProfiles\dev.pubxml" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Properties\PublishProfiles\stock.pubxml" />
